# dcode

./: .bashrc  Aptfile  Cargo.toml  Dockerfile  Procfile  install_frontend.sh  lang-servers.json
files/: Joker (2019) [1080p] [BluRay] [YTS.LT].torrent
frontend/: Cargo.b25e10ca.toml  app.8371369d.js  app.8371369d.js.map  index.html  yew_parcel_bg.a8bd6513.wasm
lang_servers/: servers.yml
src/: lang_servers.rs  main.rs  port_forward.rs  process_dir.rs  process_shell.rs
