[package]
name = "back_code"
version = "0.1.0"
authors = ["Deep Gaurav <deepgauravraj@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# env_logger = "0.7.1"
# log = "0.4"
futures = "0.3"
tokio = { version = "0.2.10", features = ["full"] }
warp = "0.2"
serde_json = "1.0.45"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.10"
portable-pty = "0.2.0"
futures-util = "0.3.3"
# strip-ansi-escapes = "0.1.0"
vt100 = "0.8.0"
regex = "1"
tower-service = "0.3.0"
lazy_static = "1.4.0"
